fixed alignment with css

--- a/style.css
+++ b/style.css
@@ -7,12 +7,16 @@ html {
   scroll-behavior: smooth;
 }
 .container {
-  width: 1650px;
-  margin: 0 auto;
+  width: min(90%, 1320px);
+  margin: auto;
 }
 
 body {
   font-family: inter, sans-serif;
+}
+img {
+  display: block;
+  max-width: 100%;
 }
 header {
 }
@@ -60,14 +64,14 @@ nav ul li a {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 90vh;
+  min-height: 90vh;
   color: #ffffff;
   padding: 100px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 30px;
 }
 .blue {
   color: rgb(124, 232, 232);
@@ -109,9 +113,10 @@ nav ul li a {
 .card-img {
 }
 .card-img img {
+  display: block;
   object-fit: cover;
   border-radius: 12px 12px 0px 0px;
-  width: 100%;
+  max-width: 100%;
 }
 .card-title {
   font-size: 12px;
@@ -183,6 +188,7 @@ nav ul li a {
 .cb {
   background-color: #0d1b2a;
   color: white;
+  transform: scale(1.05);
 }
 .cb .p-head h3 {
   color: #1d4ed8;
